--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "xml_pattern_matching"
-description = "A short description of the package."
+description = "Matching conditional XML patterns and extracting values using a simple match object."
 license = {text = "MIT License"}
-version = "0.0.1"
+version = "0.0.2"
 authors = [
     {name = "Carl Steinbach", email = "Steinbachcf01@gmail.com"},
 ]
